added solution remove element

--- a/JavaScript/package.json
+++ b/JavaScript/package.json
@@ -6,7 +6,7 @@
   "autor": "Alexandr Litkevich",
   "scripts": {
     "test": "jest",
-    "watch-tdd": "jest --watch"
+    "tdd": "jest --watch"
   },
   "license": "ISC",
   "devDependencies": {
