--- a/JavaScript/package.json
+++ b/JavaScript/package.json
@@ -1,24 +1,12 @@
 {
-  "name": "solution",
+  "name": "javascript",
   "version": "1.0.0",
   "description": "",
-  "main": "",
-  "autor": "Alexandr Litkevich",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "jest",
-    "tdd": "jest --watch"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-typescript": "^7.26.0",
-    "@jest/globals": "^29.7.0",
-    "@types/jest": "^29.5.14",
-    "babel-jest": "^29.7.0",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.5",
-    "typescript": "^5.3.3"
-  }
+  "author": "",
+  "license": "ISC"
 }
